Add advanced story discovery
